fixed followers spacing when multiple rows

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -803,6 +803,10 @@ p.card-text{
 .follow{
     font-size: 0.9rem;
 }
+
+.followBox{
+    margin-right: 9.843px;
+}
 /* --------------- SETTINGS PAGE --------------- */
 
 
